# accessible-form-assistant

./: .gitignore  GBT+37668-2019信息技术 互联网内容无障碍可访问性技术要求与测试方法.docx  LICENSE  README.md  SConstruct  accessible-form-assist.spec  pyproject.toml  requirements.txt  信息无障碍表格填写助手-开发方案1.0.0.docx
.github/: dependabot.yml
.github/instructions/: repository.instructions.md
.github/workflows/: build-binary.yml  pr-review-guard.yml  ruff.yml
projectDocs/: 信息无障碍表格填写助手-开发方案.md
src/: __init__.py  app_meta.py  main.py
src/core/: app_state.py  exporter.py  gbt37668.py  generic_import.py  importer.py  parser.py  project_manager.py  structured_import.py  utils.py
src/templates/: __init__.py  html_template.html  project_templates.json  styles.css
src/ui/: config_dialog.py  editor.py  item_dialog.py  labels.py  main_frame.py  wizard.py
tests/: test_app_meta.py  test_app_state.py  test_importer.py
